<resources>
    <string name="app_name">Mobinity</string>

    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="signUp">회원가입</string>
    <string name="login_img">login_img</string>
    <string name="sns_img">sns_img</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="location_text">어디로 보낼까요?</string>
    <string name="starting_point">출발지 : 현위치</string>
    <string name="destination">도착지 : </string>
    <string name="addressHint">주소를 입력하세요.</string>
    <string name="addressButt">검색</string>

    <string name="google_api_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDOmTBS7CnWwQV-RSjBL8Kq2Tvtn2G_yus</string>
    <string name="kakao_key">767c5a424b70976aed8fd691382f7051</string>

    <string name="title_activity_map">Mobinity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">사용자 이름</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_notification">알림</string>
    <string name="action_settings">설정</string>
</resources>
